fixed the add to bag icon non visible issue, and got rid of old complementary color

--- a/BookMarket/static/main.css
+++ b/BookMarket/static/main.css
@@ -207,9 +207,9 @@ li.options {
   color: white !important;
 } */
 
-.ti-bag:hover {
+/* .ti-bag:hover {
     color: #70a9da !important;
-}
+} */
 
 .lnr.lnr-magnifier {
     padding: 3px;
