--- a/BookMarket/static/sass/theme/_home.scss
+++ b/BookMarket/static/sass/theme/_home.scss
@@ -239,7 +239,7 @@
 					width: 30px;
 					line-height: 30px;
 					text-align: center;
-					background: #828bb2;
+					background: $primary-color;
 					border-radius: 50%;
 					display: inline-block;
 					color: #fff;
