--- a/BookMarket/static/sass/theme/_product.scss
+++ b/BookMarket/static/sass/theme/_product.scss
@@ -564,7 +564,7 @@
 			width: 40px;
 			line-height: 40px;
 			text-align: center;
-			background: #828bb2;
+			background: $primary-color;
 			border-radius: 50%;
 			display: inline-block;
 			color: #fff;
